Patch in categories/channels paths
