# c4Api/swagger.json
@@ -272,6 +272,82 @@
         }
       }
     },
+    "/categories/{category}/channel/{channel}/4od.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD programmes associated with the specified category \n  (tag).By default, the programmes are listed in order of Transmission (TX) \n  Date, with the most-recently-transmitted programmes listed first.\n\n  http://api.channel4.com/pmlsd/categories/category/channel/[channel]/4od.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/animals/4oD.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "4oD Programmes by TX Date(2)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "4oD_Programmes_by_TX_Date(2)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/4oD_Programmes_by_TX_Date",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "channel",
+            "type": "string",
+            "in": "path",
+            "required": true,
+            "enum": [
+              "c4",
+              "f4",
+              "e4",
+              "m4",
+              "4m",
+              "4s"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/derived/ad/4od.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD programmes associated with the specified category \n  (tag).By default, the programmes are listed in order of Transmission (TX) \n  Date, with the most-recently-transmitted programmes listed first.\n\n  http://api.channel4.com/pmlsd/categories/category/derived/ad/4od.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/animals/4oD.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "4oD Programmes by TX Date(3)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "4oD_Programmes_by_TX_Date(3)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/4oD_Programmes_by_TX_Date",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
     "/categories/{category}/4od/title.atom": {
       "get": {
         "description": "  Lists all Channel 4oD programmes associated with the specified category \n  (tag), alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/4od/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/religion-and-belief/4oD/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
@@ -280,6 +356,82 @@
           "discoveryresources"
         ],
         "operationId": "4oD_Programmes_by_Title",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/4oD_Programmes_by_Title",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/channel/{channel}/4od/title.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD programmes associated with the specified category \n  (tag), alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/channel/[channel]/4od/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/religion-and-belief/4oD/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "4oD Programmes by Title(2)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "4oD_Programmes_by_Title(2)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/4oD_Programmes_by_Title",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "channel",
+            "type": "string",
+            "in": "path",
+            "required": true,
+            "enum": [
+              "c4",
+              "f4",
+              "e4",
+              "m4",
+              "4m",
+              "4s"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/derived/ad/4od/title.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD programmes associated with the specified category \n  (tag), alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/derived/ad/4od/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/religion-and-belief/4oD/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "4oD Programmes by Title(3)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "4oD_Programmes_by_Title(3)",
         "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/4oD_Programmes_by_Title",
         "produces": [],
         "parameters": [
@@ -359,6 +511,82 @@
         }
       }
     },
+    "/categories/{category}/channel/{channel}.atom": {
+      "get": {
+        "description": "  Lists all Channel 4 programmes associated with the specified category (tag).  \n  By default, the programmes are listed in order of Transmission (TX) Date, \n  with the most-recently-transmitted programmes listed first.\n\n  http://api.channel4.com/pmlsd/categories/category/channel/[channel].atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/animals.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "All Programmes by TX Date(2)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "All_Programmes_by_TX_Date(2)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/All_Programmes_by_TX_Date",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "channel",
+            "type": "string",
+            "in": "path",
+            "required": true,
+            "enum": [
+              "c4",
+              "f4",
+              "e4",
+              "m4",
+              "4m",
+              "4s"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/derived/ad.atom": {
+      "get": {
+        "description": "  Lists all Channel 4 programmes associated with the specified category (tag).  \n  By default, the programmes are listed in order of Transmission (TX) Date, \n  with the most-recently-transmitted programmes listed first.\n\n  http://api.channel4.com/pmlsd/categories/category/derived/ad.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/animals.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "All Programmes by TX Date(3)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "All_Programmes_by_TX_Date(3)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/All_Programmes_by_TX_Date",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
     "/categories/{category}/title.atom": {
       "get": {
         "description": "  Lists all Channel 4 programmes associated with the specified category (tag), \n  alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/history/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
@@ -367,6 +595,82 @@
           "discoveryresources"
         ],
         "operationId": "All_Programmes_by_Title",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/All_Programmes_by_Title",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/channel/{channel}/title.atom": {
+      "get": {
+        "description": "  Lists all Channel 4 programmes associated with the specified category (tag), \n  alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/channel/[channel]/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/history/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "All Programmes by Title(2)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "All_Programmes_by_Title(2)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/All_Programmes_by_Title",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "channel",
+            "type": "string",
+            "in": "path",
+            "required": true,
+            "enum": [
+              "c4",
+              "f4",
+              "e4",
+              "m4",
+              "4m",
+              "4s"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/derived/ad/title.atom": {
+      "get": {
+        "description": "  Lists all Channel 4 programmes associated with the specified category (tag), \n  alphanumerically in order of Title.\n\n  http://api.channel4.com/pmlsd/categories/category/derived/ad/title.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/history/title.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "All Programmes by Title(3)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "All_Programmes_by_Title(3)",
         "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/All_Programmes_by_Title",
         "produces": [],
         "parameters": [
@@ -547,6 +851,113 @@
           "discoveryresources"
         ],
         "operationId": "Most_Popular_Brands_Feed",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/Most_Popular_Brands_Feed",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/popular.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD most popular brands for the given category within the \n  last 7 days, in order of popularity.\n\n  http://api.channel4.com/pmlsd/categories/category/popular.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/comedy/4od/popular.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "Most Popular Brands Feed(2)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "Most_Popular_Brands_Feed(2)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/Most_Popular_Brands_Feed",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/channel/{channel}/4od/popular.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD most popular brands for the given category within the \n  last 7 days, in order of popularity.\n\n  http://api.channel4.com/pmlsd/categories/category/channel/[channel]/4od/popular.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/comedy/4od/popular.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "Most Popular Brands Feed(3)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "Most_Popular_Brands_Feed(3)",
+        "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/Most_Popular_Brands_Feed",
+        "produces": [],
+        "parameters": [
+          {
+            "$ref": "#/parameters/platform"
+          },
+          {
+            "name": "category",
+            "type": "string",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "channel",
+            "type": "string",
+            "in": "path",
+            "required": true,
+            "enum": [
+              "c4",
+              "f4",
+              "e4",
+              "m4",
+              "4m",
+              "4s"
+            ]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Default response",
+            "schema": {
+              "$ref": "#/definitions/atom"
+            }
+          }
+        }
+      }
+    },
+    "/categories/{category}/derived/ad/4od/popular.atom": {
+      "get": {
+        "description": "  Lists all Channel 4oD most popular brands for the given category within the \n  last 7 days, in order of popularity.\n\n  http://api.channel4.com/pmlsd/categories/category/derived/ad/4od/popular.atom?apikey=xxxxxxxxxxxxxxxxxxxxxxxx\n\n  http://api.channel4.com/pmlsd/categories/comedy/4od/popular.atom?apikey=z4mwwux6yvahy4jz4xe3xeb4",
+        "summary": "Most Popular Brands Feed(4)",
+        "tags": [
+          "discoveryresources"
+        ],
+        "operationId": "Most_Popular_Brands_Feed(4)",
         "x-documentation": "./apiSource/developer.channel4.com/docs/read/programmesapiguide/discoveryresources/Most_Popular_Brands_Feed",
         "produces": [],
         "parameters": [
